force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/HRCSVC_Complaint_Qualification__c.object-meta.xml
<CustomObject>
    <label>Complaint Qualification</label>
    <nameField>
        <displayFormat>CQ-{0000}</displayFormat>
        <label>Complaint Qualification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Qualifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>