force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRC_Functioning_as_designed_post_repair__c.field-meta.xml
<CustomField>
    <fullName>HRC_Functioning_as_designed_post_repair__c</fullName>
    <description>SE-163 - From existing repair template</description>
    <label>Functioning as designed post repair</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>