force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC20_Complaint_Resolution__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Complaint_Resolution__c</fullName>
    <description>Complaint resolution field added as part of SE-2785</description>
    <label>Resolution</label>
    <type>TextArea</type>
</CustomField>