force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC20_Describe_Cause_Troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Describe_Cause_Troubleshooting__c</fullName>
    <label>Describe Cause, Troubleshooting</label>
    <type>TextArea</type>
</CustomField>