force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC20_Describe_Other_Condition__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Describe_Other_Condition__c</fullName>
    <label>Describe Other Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>