force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC20_Instruction__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Instruction__c</fullName>
    <description>SE-2620: Used in Send to ETQ quick action layout (Service Cloud 2.1)</description>
    <formula>&quot;Please click on the Save button to send the Complaint Qualification details to ETQ&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instruction</label>
    <type>Text</type>
</CustomField>