force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC20_Requires_Translation__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Requires_Translation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>SE-2620:I want to review the qualified CQs for translation so that I can ensure only translated information can sync over to EtQ (Service Cloud 2.1) - By default checked and gets unchecked with Send To ETQ action. Used In a report (CQ&apos;s that Require Translation) which filters records based on Case and WO language.</description>
    <label>Requires Translation</label>
    <type>Checkbox</type>
</CustomField>