force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC20_Send_to_ETQ__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Send_to_ETQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-2620 - Checkbox used in the CQ Process builder to trigger Platform Event to ETQ (Service Cloud 2.1).</description>
    <label>Send to ETQ</label>
    <type>Checkbox</type>
</CustomField>