force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_Assigned_Engineer__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Assigned_Engineer__c</fullName>
    <description>SE-2622: CQ UI Improvements</description>
    <formula>HRCSVC_Work_Order__r.HRCFSL_Assigned_Engineer__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Engineer</label>
    <type>Text</type>
</CustomField>