force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_Complaint_Attachment_Info__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Complaint_Attachment_Info__c</fullName>
    <description>This field will hold a concatenated list of CQ attachments which will be read by Mulesoft and push into ETQ.</description>
    <label>Complaint Attachment Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>