force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_CQ_Creation_Duration_From_Case__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_CQ_Creation_Duration_From_Case__c</fullName>
    <description>SE-2263- Used in New complaint creation cycle time report to calculate the duration between Case and CQ creation</description>
    <formula>CEILING(CreatedDate -  HRCSVC_Case__r.CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (In Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>