force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_Display_ETQ_Workflow__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Display_ETQ_Workflow__c</fullName>
    <description>Display Medical or Non-Medical on the page layout based on the the ETQ workflow instead of INTAKE_P</description>
    <formula>IF(HRCSVC_ETQ_Workflow__c = &apos;INTAKE_P&apos;, &apos;Medical&apos;, &apos;Non-Medical&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETQ Workflow</label>
    <type>Text</type>
</CustomField>