force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_EtQ_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_EtQ_Status__c</fullName>
    <description>SE-2620- To acknowledge that the CQ details have been sent to ETQ and are In Process/Processed.</description>
    <label>ETQ Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need to Process</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>