force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Item_Description__c</fullName>
    <description>SE-2622: CQ UI Improvements</description>
    <formula>HRCSVC_Asset__r.HRCSVC_Item_Number_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Description</label>
    <type>Text</type>
</CustomField>