force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_Location__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Location__c</fullName>
    <description>SE-2622: CQ UI Improvements</description>
    <formula>HRCSVC_Case__r.HRCSVC_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>