force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_Product_Family_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Product_Family_Description__c</fullName>
    <description>SE-2622: CQ UI Improvements</description>
    <formula>HRCSVC_Asset__r.HRCFSL_Product_Family_Desc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family Description</label>
    <type>Text</type>
</CustomField>