force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Serial_Number__c</fullName>
    <description>SE-2622: CQ UI Improvements</description>
    <formula>HRCSVC_Asset__r.SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>