force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Shipment_Date__c</fullName>
    <description>SE-2622: CQ UI Improvements</description>
    <formula>HRCSVC_Asset__r.HRCSVC_Shipment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>