force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_Software_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Software_Version__c</fullName>
    <description>SE-2622: CQ UI Improvements</description>
    <formula>HRCSVC_Asset__r.HRCSVC_Software_Version__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software Version (from the asset)</label>
    <type>Text</type>
</CustomField>