force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_Translation_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Translation_Status__c</fullName>
    <description>SE-2620- To acknowledge that the CQ details have been sent to ETQ and are In Process/Processed. Repurposed to hold the translation status.</description>
    <label>Translation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Translated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>