force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC21_URL__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_URL__c</fullName>
    <description>SE-2622: CQ UI Improvements</description>
    <formula>HRCSVC_Case__r.HRCSVC_CC_KB_Article__r.HRCSVC_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL</label>
    <type>Text</type>
</CustomField>