force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Account__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Complaint Qualifications</relationshipLabel>
    <relationshipName>Complaint_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>