force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Additional_Death_Questions__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Additional_Death_Questions__c</fullName>
    <description>SE-163 - Hide/Show= If =  Death show the additional Injury questions</description>
    <label>Additional Death Questions</label>
    <type>TextArea</type>
</CustomField>