force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>