force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Additional_Injury_Questions__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Additional_Injury_Questions__c</fullName>
    <description>SE-163 - Hide/Show= If = Injury show the additional Injury questions</description>
    <label>Additional Injury Questions</label>
    <type>TextArea</type>
</CustomField>