force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Additional_Malfunction_Questions__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Additional_Malfunction_Questions__c</fullName>
    <description>SE-163 - Hide/Show= If Status field = EtQ Complaint</description>
    <label>Additional Malfunction Questions</label>
    <type>TextArea</type>
</CustomField>