force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Age__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Age__c</fullName>
    <label>Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>