force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Age_unit_of_measure__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Age_unit_of_measure__c</fullName>
    <label>Age unit of measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>