force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Asset__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Complaint Qualifications</relationshipLabel>
    <relationshipName>Complaint_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>