force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Aware_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Aware_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>SE-163 - Default to Current Date</description>
    <label>Aware Date</label>
    <type>Date</type>
</CustomField>