force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Case__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Complaint Qualifications</relationshipLabel>
    <relationshipName>Complaint_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>