force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Cause_of_death_if_known__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Cause_of_death_if_known__c</fullName>
    <label>Cause of death if known</label>
    <length>255</length>
    <type>Text</type>
</CustomField>