force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Certification_Date__c</fullName>
    <description>SE-1199</description>
    <formula>HRCSVC_Case__r.Asset.HRCSVC_Certification_Date__c</formula>
    <label>Certification Date</label>
    <type>Date</type>
</CustomField>