force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Complaint_Occupation__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Complaint_Occupation__c</fullName>
    <label>Complaint Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biomed</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Nurse/Caregiver</fullName>
            </value>
            <value>
                <fullName>FSE (Field Service Engineer)</fullName>
            </value>
            <value>
                <fullName>Other/Patient</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>FSE (Field Service Engineer)Technician,</fullName>
                <isActive>false</isActive>
                <label>FSE (Field Service Engineer)Technician,</label>
            </value>
            <value>
                <fullName>Unknown&quot;</fullName>
                <isActive>false</isActive>
                <label>Unknown&quot;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>