force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Condition__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Condition__c</fullName>
    <description>SE-163 - Complaint Determination- Priority 2- If= any keyword except for None- regardless of other values on the form= Complaint</description>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Cross Contamination</fullName>
            </value>
            <value>
                <fullName>Delayed/Prolonged Diagnosis-Treatment or Hospitalization</fullName>
            </value>
            <value>
                <fullName>Emergency Code or Adverse Event</fullName>
            </value>
            <value>
                <fullName>Falling</fullName>
            </value>
            <value>
                <fullName>Neonate/Newborn</fullName>
            </value>
            <value>
                <fullName>Regulatory Agency Involvement</fullName>
            </value>
            <value>
                <fullName>Sterile Field Compromised</fullName>
            </value>
            <value>
                <fullName>Unintended Movement</fullName>
            </value>
            <value>
                <fullName>Unnecessary Medication/Treatment</fullName>
            </value>
            <value>
                <fullName>QA/RA Use Only</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Emergency Code/ Patient Deterioration/ Adverse Event</fullName>
            </value>
            <value>
                <fullName>Falling of Patient or Caregiver</fullName>
            </value>
            <value>
                <fullName>Unintended Movement of Patient During Use of the Device</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
                <default>true</default>
                <label>Blank</label>
            </value>
            <value>
                <fullName>Delayed Prolonged Diagnosis/ Treatment/ Hospitalization</fullName>
                <isActive>false</isActive>
                <label>Delayed Prolonged Diagnosis/ Treatment/ Hospitalization</label>
            </value>
            <value>
                <fullName>Emergency Code</fullName>
                <isActive>false</isActive>
                <label>Emergency Code</label>
            </value>
            <value>
                <fullName>Fire/ Spark/ Shock</fullName>
                <isActive>false</isActive>
                <label>Fire/ Spark/ Shock</label>
            </value>
            <value>
                <fullName>Neonate/ Newborn</fullName>
                <isActive>false</isActive>
                <label>Neonate/ Newborn</label>
            </value>
            <value>
                <fullName>Unnecessary Medication</fullName>
                <isActive>false</isActive>
                <label>Unnecessary Medication</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>