force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Contact__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Complaint Qualifications</relationshipLabel>
    <relationshipName>Complaint_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>