force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Contact_Details__c</fullName>
    <description>SE-2259 Updates to Manage Complaint flow</description>
    <label>Contact Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>