force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Date_of_the_Event__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Date_of_the_Event__c</fullName>
    <label>Date of the Event</label>
    <type>Date</type>
</CustomField>