force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Defined_Design_Life__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Defined_Design_Life__c</fullName>
    <formula>HRCSVC_Asset__r.HRCSVC_Design_Life__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defined Design Life</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>