force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Delay_in_Individual_Treatment__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Delay_in_Individual_Treatment__c</fullName>
    <label>Delay in Individual&apos;s Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>