force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Delay_in_treatment_or_Procedure__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Delay_in_treatment_or_Procedure__c</fullName>
    <inlineHelpText>If any delay in treatment or procedure occurred, enter details</inlineHelpText>
    <label>Delay in treatment or Procedure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>