force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Describe_Malfunction_Event__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Describe_Malfunction_Event__c</fullName>
    <description>SE-163 - From existing repair template</description>
    <label>Describe Malfunction/Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>