force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Design_Life_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Design_Life_Exceeded__c</fullName>
    <formula>IF(isblank(  HRCSVC_Asset__r.HRCSVC_Design_Life__c  ) || isblank(  HRCSVC_Asset__r.ManufactureDate   ), &apos;Unknown&apos;,  IF( HRCSVC_Asset__r.ManufactureDate + 365* HRCSVC_Asset__r.HRCSVC_Design_Life__c &lt;  HRCSVC_Aware_Date__c , &apos;Yes&apos;, &apos;No&apos;) )</formula>
    <label>Design Life Exceeded</label>
    <type>Text</type>
</CustomField>