force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Design_Life_Override_Justificatn__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Design_Life_Override_Justificatn__c</fullName>
    <defaultValue>&apos;None&apos;</defaultValue>
    <description>SE-163 - Default as None</description>
    <label>Design Life Override Justification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Date/Lot Code Entered Manually</fullName>
            </value>
            <value>
                <fullName>Serial Number Verified Manually</fullName>
            </value>
            <value>
                <fullName>Software Version Verified Manually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>