force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Device_Age__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Device_Age__c</fullName>
    <formula>HRCSVC_Asset__r.HRCSVC_Device_Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Age (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>