force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Device_Life_Override__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Device_Life_Override__c</fullName>
    <description>SE-163 - Default to &quot;No&quot;</description>
    <label>Device Life Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>