force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Device_Message_Alert__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Device_Message_Alert__c</fullName>
    <label>Device Message Alert</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>