force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Device_Used_On_With_Individual__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Device_Used_On_With_Individual__c</fullName>
    <label>Device Used On With Individual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>