force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Document_troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Document_troubleshooting__c</fullName>
    <description>SE-163 - From existing repair template</description>
    <label>Describe Cause, Troubleshooting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>