force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_ETQ_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_ETQ_Complaint_Number__c</fullName>
    <description>This field is the Original ID, not the ETQ Complaint Number.</description>
    <externalId>true</externalId>
    <label>Original ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>