force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_ETQ_Workflow__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_ETQ_Workflow__c</fullName>
    <formula>IF(ISBLANK(HRCSVC_Found_ETQ_Workflow__c), &quot;INTAKE_P&quot;, HRCSVC_Found_ETQ_Workflow__c)</formula>
    <label>ETQ Workflow</label>
    <type>Text</type>
</CustomField>