force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Event_Allegation_Details__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Event_Allegation_Details__c</fullName>
    <description>SE-2259 Update to Manage Complaint flow</description>
    <label>Event Allegation Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>