force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Events_Occurred_Allegation__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Events_Occurred_Allegation__c</fullName>
    <description>SE-2259 Updates to Manage Complaint flow</description>
    <label>Events Occurred Allegation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Delayed/Prolonged Diagnosis Treatment or Hospitalization</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patient Condition Deteriorated</fullName>
            </value>
            <value>
                <fullName>Prolonged Procedure/Surgery</fullName>
            </value>
            <value>
                <fullName>Sterile Field Compromised</fullName>
            </value>
            <value>
                <fullName>Unintended Movement of Patient</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Unnecessary Medication Treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>