force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Existing_CQ_with_case__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Existing_CQ_with_case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated from the flow &apos;Prevent Multiple Company Qualification On Case&apos; and validation rule to prevent multiple CQ on case record.</description>
    <label>Existing CQ with case</label>
    <type>Checkbox</type>
</CustomField>