force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Explain_if_No__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Explain_if_No__c</fullName>
    <description>SE-163 - From existing repair template</description>
    <label>Explain if No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>