force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Found_ETQ_Workflow__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Found_ETQ_Workflow__c</fullName>
    <label>Found ETQ Workflow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>