force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Gender__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
                <label>male</label>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>