force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Healthcare_Professional__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Healthcare_Professional__c</fullName>
    <description>SE-2259 Updates to Manage Complaint flow</description>
    <label>Operator a Healthcare Professional?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>