force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_How_did_the_injury_occur__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_How_did_the_injury_occur__c</fullName>
    <label>How did the injury occur?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>