force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Individual_Medical_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Individual_Medical_Diagnosis__c</fullName>
    <label>Individual&apos;s Medical Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>